--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": "10"
   },
   "dependencies": {
+    "@types/leaflet": "^1.4.4",
     "babel-jest": "^24.8.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
