--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.4.4",
+    "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-jest": "^24.8.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -36,6 +38,7 @@
     "react-dom": "16.8.6",
     "react-redux": "7.0.3",
     "react-test-renderer": "^16.8.6",
-    "redux": "4.0.1"
+    "redux": "4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
