--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "16.8.6",
     "react-redux": "7.0.3",
     "react-test-renderer": "^16.8.6",
+    "recompose": "^0.30.0",
     "redux": "4.0.1",
     "redux-thunk": "^2.3.0"
   }
