--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-test-renderer": "^16.8.6",
     "recompose": "^0.30.0",
     "redux": "4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   }
 }
