--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.5",
-    "eslint": "^5.13.0",
+    "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.12.4",
     "webpack": "4.30.0",
@@ -25,23 +25,23 @@
     "node": "10"
   },
   "dependencies": {
-    "@types/leaflet": "^1.4.4",
-    "axios": "^0.19.0",
-    "axios-mock-adapter": "^1.16.0",
-    "babel-jest": "^24.8.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "jest": "^24.8.0",
+    "@types/leaflet": "1.4.4",
+    "axios": "0.19.0",
+    "axios-mock-adapter": "1.16.0",
+    "babel-jest": "24.8.0",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
+    "jest": "24.8.0",
     "leaflet": "1.5.1",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.0.3",
-    "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.8.6",
-    "recompose": "^0.30.0",
+    "react-router-dom": "5.0.1",
+    "react-test-renderer": "16.8.6",
+    "recompose": "0.30.0",
     "redux": "4.0.1",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   }
 }
