--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@babel/core": "7.4.4",
     "@babel/preset-env": "7.4.4",
     "@babel/preset-react": "7.0.0",
+    "@types/react": "16.8.20",
     "babel-loader": "8.0.5",
     "eslint": "5.13.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.12.4",
+    "ts-loader": "6.0.3",
+    "typescript": "3.5.2",
+    "utility-types": "3.7.0",
     "webpack": "4.30.0",
     "webpack-cli": "3.3.1",
     "webpack-dev-server": "3.3.1"
